# qt-fcgi-nginx-sample

./: CMakeLists.txt  README.md  build.sh  build_docker.sh  launch_docker.sh
_docker/: Dockerfile
_docker/nginx/: launch_fcgi.sh
_docker/nginx/sites-enabled/: default
cmake/: FindFCGI.cmake
src/: FCGIThread.cpp  FCGIThread.h  main.cpp
